--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
-    "next": "10.0.3",
-    "next-seo": "^4.17.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "next": "12.3.0",
+    "next-seo": "5.5.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
