--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.2",
-    "next": "12.3.0",
-    "next-seo": "5.5.0",
+    "@stitches/react": "^1.2.8",
+    "@vercel/og": "^0.0.20",
+    "next": "^12.3.1",
+    "next-seo": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "18.11.0",
+    "@types/react": "^18.0.21",
+    "typescript": "^4.8.4"
   }
 }
